--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -12,12 +12,12 @@ fr:
   devise:
     confirmations:
       send_instructions: "Vous allez recevoir un courriel contenant des instructions pour activer votre compte."
-      confirmed: "Votre compte a été activé. Vous êtes maintenant connecté."
+      confirmed: "Votre compte a été activé. Vous pouvez maintenant vous connecter"
     failure:
       unauthenticated: "Vous devez vous connecter ou vous inscrire pour continuer."
       unconfirmed: "Vous devez confirmer votre compte pour continuer."
       locked: "Votre compte est verrouillé."
-      invalid: "Courriel ou mot de passe incorrect."
+      invalid: "Email ou mot de passe incorrect."
       invalid_token: "Jeton d'authentification incorrect."
       timeout: "Votre session est expirée, veuillez vous reconnecter pour continuer."
       inactive: "Votre compte n'est pas encore activé."
@@ -29,17 +29,17 @@ fr:
       reset_password_instructions: "Instructions pour changer le mot de passe"
       unlock_instructions: "Instructions pour déverrouiller le compte"
     registrations:
-      signed_up: "Votre inscription est enregistrée. Si demandé, un courriel de confirmation vous a été envoyé."
+      signed_up: "Votre inscription est enregistrée. Si demandé, un email de confirmation vous a été envoyé."
       updated: "Votre mise à jour a été prise en compte."
       destroyed: "Votre compte a été supprimé. Nous espérons vous revoir bientôt."
     sessions:
-      signed_in: "Connecté."
-      signed_out: "Déconnecté."
+      signed_in: "Vous êtes désormais connecté."
+      signed_out: "Vous êtes désormais déconnecté."
     passwords:
-      send_instructions: "Vous allez recevoir un courriel contenant des instructions pour changer votre mot de passe."
+      send_instructions: "Vous allez recevoir un email contenant des instructions pour changer votre mot de passe."
       updated: "Votre mot de passe a été changé. Vous êtes maintenant connecté."
     unlocks:
-      send_instructions: "Vous allez recevoir un courriel avec des instructions pour déverrouiller votre compte."
-      unlocked: "Votre compte est déverrouillé. Vous êtes maintenant connecté."
+      send_instructions: "Vous allez recevoir un email avec des instructions pour déverrouiller votre compte."
+      unlocked: "Votre compte est déverrouillé."
     user:
       destroyed: "Votre compte a été correctement supprimé"
